tests/invalid/Return_Invalid_1.whiley
import * from whiley.lang.*

function f() -> bool:
    return 1
